--- a/styles/blog.css
+++ b/styles/blog.css
@@ -52,6 +52,7 @@
             border-radius: 50%;
             object-fit: cover;
             border: 2px solid #764ba2;
+            cursor: pointer;
         }
 
         .login-btn {
